# personal_website

./: .Rprofile  .gitignore  Cargo.toml  README.md  _output.yml  _redirects  config.toml
.github/workflows/: deploy.yml
content/: about.md  config.toml  food-for-thought.md  learning_resources.md  study_plan.md
content/blog/: 2015-07-23-r-rmarkdown.html  2017-12-17-blalblalbalba.html  2017-12-17-blalblalbalba.rmd  2017-12-26-what-about-tree-models.Rmd  2017-12-26-what-about-tree-models.html  2018-01-16-a-data-wrangling-case-with-r.html  2018-01-16-a-data-wrangling-case-with-r.rmd  2018-05-17-a-brief-post-about-k-means.html  2018-05-17-a-brief-post-about-k-means.rmd  2018-05-17-a-little-post-about-k-means.html  2018-05-17-a-little-post-about-k-means.rmd  2020-07-17-el-semestre-faltante-en-tu-educación-de-cs.html  2020-07-17-el-semestre-faltante-en-tu-educación-de-cs.rmd  2020-12-09-crear-entornos-virtuales-en-python-y-asociarlo-a-un-kernel-de-jupyter-notebook.html  2020-12-09-crear-entornos-virtuales-en-python-y-asociarlo-a-un-kernel-de-jupyter-notebook.rmd  int_alg.bib
content/pages/: about.md  food-for-thought.md
content/posts/: 2020-07-17-el-semestre-faltante-en-tu-educación-de-cs.md  2020-12-09-crear-entornos-virtuales-en-python-y-asociarlo-a-un-kernel-de-jupyter-notebook.md  2021-02-14-berkson-s-paradox.md  2022-01-28-taylor-approximation-and-jax.md  2022-02-08-directional-derivatives-and-jax.md  2022-05-11-notes-about-how-i-am-internalizing-vim-keybindings.md  2022-05-19-this-is-how-gauss-would-compute-a-confusion-matrix.md  2022-07-09-fastai-chapter-1.md  (+6 more)
docs/: cutover-guide.md  mathml-spike.html  mathml-spike.md
migrate/: Cargo.toml
migrate/src/: main.rs
ssg/: Cargo.toml
ssg/src/: config.rs  content.rs  feed.rs  main.rs  templates.rs
ssg/src/render/: bibliography.rs  code.rs  math.rs  mod.rs
styles/: main.css
templates/: 404.html  base.html  index.html  page.html  post.html
(+33 files in other folders)
