[package]
name = "migrate"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true

[[bin]]
name = "migrate"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
serde.workspace = true
serde_yaml.workspace = true
toml.workspace = true
walkdir.workspace = true
regex.workspace = true
